# trafficserver

./: .gitignore  CHANGES  Makefile.am  NOTICE  configure.ac
ci/new_tsqa/: Makefile  requirements.txt
cmd/traffic_cop/: traffic_cop.cc
cmd/traffic_crashlog/: traffic_crashlog.cc
cmd/traffic_ctl/: Makefile.am  server.cc  traffic_ctl.cc  traffic_ctl.h
cmd/traffic_layout/: Makefile.am  engine.cc  engine.h  file_system.cc  info.cc  traffic_layout.cc
cmd/traffic_manager/: AddConfigFilesHere.cc  Makefile.am  traffic_manager.cc
cmd/traffic_shell/: CliMgmtUtils.cc  ConfigCmd.cc  ConfigCmd.h
cmd/traffic_top/: Makefile.am  stats.h  traffic_top.cc
configs/: volume.config.default
contrib/python/: compare_RecordsConfigcc.py
doc/: checkvers.py
doc/admin/: event-logging-formats.en.rst  http-proxy-caching.en.rst
example/: Makefile.am
lib/: Makefile.am
mgmt/: BaseManager.h  FileManager.cc  FileManager.h  LocalManager.cc  LocalManager.h  MgmtDefs.h  ProcessManager.cc  ProcessManager.h  ProxyConfig.cc  ProxyConfig.h  RecordsConfig.cc  Rollback.cc  Rollback.h
plugins/: Makefile.am
proxy/: ControlMatcher.cc  Crash.cc  FetchSM.cc  ICPConfig.cc  IPAllow.cc  IPAllow.h  InkAPI.cc  InkAPIInternal.h  InkAPITest.cc  InkIOCoreAPI.cc  Main.cc  Main.h  Makefile.am  ParentSelection.cc  Plugin.cc  PluginVC.cc  PluginVC.h  PoolableSession.h  Prefetch.cc  ProtocolProbeSessionAccept.cc  ProxyClientSession.cc  ProxyClientSession.h  ProxyClientTransaction.cc  ProxyClientTransaction.h  ProxySession.cc  ProxySession.h  ProxyTransaction.cc  ProxyTransaction.h  SessionPoolInterface.h  StatSystem.h  Update.cc  logcat.cc  logstats.cc
rc/: trafficserver.in  trafficserver.service.in
tests/: bootstrap.py  getting_started.md
tools/: tsxs.in
(+621 files in other folders)
